--- a/demo.html
+++ b/demo.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>載入地圖控制項</title>
+	<title>Map Scalbar Demo</title>
 	<link rel="stylesheet" href="assets/iScaleBar.css">
-	<script type = "text/javascript" src='http://code.jquery.com/jquery-1.7.2.min.js'></script>
+	<script type = "text/javascript" src='http://code.jquery.com/jquery-1.3.min.js'></script>
 	<script type = "text/javascript" src="assets/iScaleBar.js"></script>
-	<!-- 使用達康地圖API , API KEY 需要申請 -->
+	<!-- use Trend-go map's API, api and kep need to apply at "http://api.map.com.tw"-->
 	<script type="text/javascript" src="http://api.map.com.tw/js/getAPI.asp?v=1&key=DFCE9CCD255DB124825E75C2EFEAB9C10E513C09"></script>
 	<script>
 		$(function(){
 			var map;
-      		//定義Map初始位置
+      		//define map
       		map = new iMap (document.getElementById ("map_canvas")); 
-　　		map.centerMap (new Point (121.52,25.035) ,7 );   //設定地圖初始位置 
+　　		map.centerMap (new Point (121.52,25.035) ,7 );   //init location 
 			
-			//註解(移除)原有的達康地圖控制項
+			//remove the defalult map scale controller of Trend-go map. 
 			//map.addControl ('LargeScaleBar'); 
-
 
 			//iScaleBar options
 			var options = {
@@ -28,7 +27,7 @@
 				zoom_gap_min: 9,
 				zoom_gap_max: 12
 			};
-
+			//init constructor.
 			new iScaleBar( "map_canvas", map, options);
 
 		});
