--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
 	<script type = "text/javascript" src='http://code.jquery.com/jquery-1.3.min.js'></script>
 	<script type = "text/javascript" src="assets/iScaleBar.js"></script>
 	<!-- use Trend-go map's API, api and kep need to apply at "http://api.map.com.tw"-->
-	<script type="text/javascript" src="http://api.map.com.tw/js/getAPI.asp?v=1&key=DFCE9CCD255DB124825E75C2EFEAB9C10E513C09"></script>
+	<script type="text/javascript" src="http://api.map.com.tw/js/getAPI.asp?v=1&key=your_key_here"></script>
 	<script>
 		$(function(){
 			var map;
